<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frg_recipt_list"
    android:background="#000000"
    android:clickable="true"
    tools:context="br.com.hisao.hf.fragments.RecipeListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:background="#FFFFFF"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_height="40dp">

            <TextView
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Hello Fresh app" />

            <TextView
                android:layout_gravity="center"
                android:id="@+id/login_action"
                android:layout_marginRight="20dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login" />

        </LinearLayout>

        <ListView
            android:id="@+id/list_receipts"
            android:layout_width="match_parent"
            android:dividerHeight="@dimen/default_margin"
            android:layout_weight="1"
            android:layout_height="0dp">

        </ListView>

    </LinearLayout>
</FrameLayout>
