<resources>
    <string name="app_name">Hf</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="favorites">Favorites</string>
    <string name="ratings">Ratings</string>
    <string name="rating">Rating</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="not_available">Not available</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="password_not_valid">Password not valid</string>
</resources>
