package br.com.hisao.hf;


import android.os.SystemClock;
import android.support.test.espresso.ViewInteraction;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.test.suitebuilder.annotation.LargeTest;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.hamcrest.core.IsInstanceOf;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.scrollTo;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class RecipeDetailsStarAndFavoritesTest {

    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);

    @Test
    public void recipeDetailsStarAndFavoritesTest() {
        ViewInteraction textView = onView(
                allOf(withText("Click for details"),
                        childAtPosition(
                                allOf(withId(R.id.activity_main),
                                        childAtPosition(
                                                withId(R.id.list_receipts),
                                                0)),
                                2),
                        isDisplayed()));

        SystemClock.sleep(1500);

        textView.check(matches(isDisplayed()));

        ViewInteraction linearLayout = onView(
                allOf(withId(R.id.activity_main),
                        childAtPosition(
                                withId(R.id.list_receipts),
                                0),
                        isDisplayed()));
        linearLayout.perform(click());

        SystemClock.sleep(1500);


        ViewInteraction appCompatImageView = onView(
                allOf(withId(R.id.star1), isDisplayed()));
        SystemClock.sleep(1500);
        appCompatImageView.perform(click());
        SystemClock.sleep(1500);
        ViewInteraction appCompatButton = onView(
                allOf(withId(android.R.id.button2), withText("Cancel")));
        appCompatButton.perform(scrollTo(), click());
        SystemClock.sleep(1500);
        ViewInteraction appCompatImageView2 = onView(
                allOf(withId(R.id.star2), isDisplayed()));
        SystemClock.sleep(1500);
        appCompatImageView2.perform(click());
        SystemClock.sleep(1500);
        ViewInteraction appCompatButton2 = onView(
                allOf(withId(android.R.id.button2), withText("Cancel")));
        SystemClock.sleep(1500);
        appCompatButton2.perform(scrollTo(), click());
        SystemClock.sleep(1500);
        ViewInteraction appCompatImageView3 = onView(
                allOf(withId(R.id.star3), isDisplayed()));
        SystemClock.sleep(1500);
        appCompatImageView3.perform(click());
        SystemClock.sleep(1500);
        ViewInteraction appCompatButton3 = onView(
                allOf(withId(android.R.id.button2), withText("Cancel")));
        SystemClock.sleep(1500);
        appCompatButton3.perform(scrollTo(), click());
        SystemClock.sleep(1500);
        ViewInteraction appCompatImageView4 = onView(
                allOf(withId(R.id.star4), isDisplayed()));
        SystemClock.sleep(1500);
        appCompatImageView4.perform(click());
        SystemClock.sleep(1500);
        ViewInteraction appCompatButton4 = onView(
                allOf(withId(android.R.id.button2), withText("Cancel")));
        appCompatButton4.perform(scrollTo(), click());
        SystemClock.sleep(1500);
        ViewInteraction appCompatImageView5 = onView(
                allOf(withId(R.id.star5), isDisplayed()));
        SystemClock.sleep(1500);
        appCompatImageView5.perform(click());
        SystemClock.sleep(1500);
        ViewInteraction appCompatButton5 = onView(
                allOf(withId(android.R.id.button2), withText("Cancel")));
        SystemClock.sleep(1500);
        appCompatButton5.perform(scrollTo(), click());
        SystemClock.sleep(1500);
        ViewInteraction appCompatImageView6 = onView(
                allOf(withId(R.id.like), isDisplayed()));
        SystemClock.sleep(1500);
        appCompatImageView6.perform(click());
        SystemClock.sleep(1500);
        ViewInteraction appCompatButton6 = onView(
                allOf(withId(android.R.id.button2), withText("Cancel")));
        SystemClock.sleep(1500);
        appCompatButton6.perform(scrollTo(), click());
        SystemClock.sleep(1500);
        appCompatImageView6.check(matches(isDisplayed()));

    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}
